<resources>
	<string name="app_name">WhatsApp</string>
	<string name="digite_seu_e_mail">Digite seu e-mail</string>
	<string name="digite_sua_senha">Digite sua senha</string>
	<string name="logar">Logar</string>
	<string name="n_o_tem_conta_cadastre_se">Não tem conta? Cadastre-se</string>
	<string name="digite_o_seu_nome">Digite o seu nome</string>
	<string name="cadastrar">Cadastrar</string>
</resources>