<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	tools:context=".activity.CadastroActivity">

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="200dp"
		android:layout_height="157dp"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed"
		app:srcCompat="@drawable/usuario" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView2">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/nome_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/digite_o_seu_nome"
			android:inputType="textPersonName" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout4"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/email_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/digite_seu_e_mail"
			android:inputType="textEmailAddress" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout5"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="16dp"
		app:layout_constraintBottom_toTopOf="@+id/button2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/senha_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/digite_sua_senha"
			android:inputType="textPassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="8dp"
		android:background="@color/colorPrimaryDark"
		android:text="@string/cadastrar"
		android:textColor="@android:color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>